Added wart-remover and included extra work which is required